--- a/source/index.html
+++ b/source/index.html
@@ -139,7 +139,7 @@
             <div class="slider__toggle">
               <button class="slider__button slider__button--before">Было</button>
               <div class="slider__scale">
-                <div class="slider__thumb"></div>
+                <div class="slider__thumb" tabindex="0"></div>
               </div>
               <button class="slider__button">Стало</button>
             </div>
