--- a/source/index.html
+++ b/source/index.html
@@ -100,7 +100,7 @@
         </ul>
       </section>
       <section class="example">
-        <div class="example__container container">
+        <div class="example__container container container--example">
           <div class="example__box">
             <h2 class="example__title">Живой пример</h2>
             <p class="example__text">
@@ -137,68 +137,68 @@
               </div>
             </div>
             <div class="slider__toggle">
-              <button class="slider__button slider__button--before">Было</button>
-              <div class="slider__scale">
-                <div class="slider__thumb" tabindex="0"></div>
-              </div>
-              <button class="slider__button">Стало</button>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-    <footer class="page-footer page-footer--index">
-      <div class="page-footer__wrapper container">
-        <p class="page-footer__cooperation">Приглашаем к&nbsp;сотрудничеству дилеров!</p>
-        <address class="page-footer__address">
-          ул. Большая Конюшенная, д. 19/8
-          <span class="page-footer__address page-footer__address--space">Санкт-Петербург</span>
-        </address>
-      </div>
-      <div class="page-footer__map">
-        <iframe class="page-footer__map-image" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2393.9919987303897!2d30.320439600490996!3d59.93850547005891!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1618024616357!5m2!1sru!2sru" width="600" height="400" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
-      </div>
-      <div class="page-footer__contacts">
-        <div class="page-footer__container container">
-          <a href="#" class="page-footer__logo">
-            <img src="img/footer-logo.svg" width="128" height="24" alt="Магазин Cat Energy" class="page-footer__title-image">
-          </a>
-          <div class="page-footer__element">
-            <ul class="socials">
-              <li class="socials__item">
-                <a class="socials__link socials__link--vk" href="#" title="Вконтакте" target="_blank" rel="noopener noreferrer">
-                  <span class="visually-hidden">Ссылка на страницу магазина в социальной сети "В Контакте"</span>
-                  <svg class="socials__svg" aria-hidden="true" width="23" height="16">
-                    <use href="img/sprite.svg#icon-vk"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="socials__item">
-                <a class="socials__link socials__link--insta" href="#" title="Instagram" target="_blank" rel="noopener noreferrer">
-                  <span class="visually-hidden">Ссылка на страницу магазина в социальной сети "Instagram"</span>
-                  <svg class="socials__svg" aria-hidden="true" width="16" height="16">
-                    <use href="img/sprite.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="socials__item">
-                <a class="socials__link socials__link--facebook" href="#" title="Facebook" target="_blank" rel="noopener noreferrer">
-                  <span class="visually-hidden">Ссылка на страницу магазина в социальной сети "Facebook"</span>
-                  <svg class="socials__svg socials__svg--facebook" aria-hidden="true" width="22" height="22">
-                    <use href="img/sprite.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <a class="page-footer__copyright" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noopener noreferrer">
-            <span class="page-footer__copyright-text">HTML Academy</span>
-            <svg aria-hidden="true" width="27" height="34">
-              <use  href="img/sprite.svg#logo-html-academy"></use>
-            </svg>
-          </a>
-        </div>
-      </div>
-    </footer>
-  </body>
-</html>
+               <button class="slider__button slider__button--before">Было</button>
+               <div class="slider__scale">
+                 <div class="slider__thumb" tabindex="0"></div>
+               </div>
+               <button class="slider__button">Стало</button>
+             </div>
+           </div>
+         </div>
+       </section>
+     </main>
+     <footer class="page-footer page-footer--index">
+       <div class="page-footer__wrapper container">
+         <p class="page-footer__cooperation">Приглашаем к&nbsp;сотрудничеству дилеров!</p>
+         <address class="page-footer__address">
+           ул. Большая Конюшенная, д. 19/8
+           <span class="page-footer__address page-footer__address--space">Санкт-Петербург</span>
+         </address>
+       </div>
+       <div class="page-footer__map">
+         <iframe class="page-footer__map-image" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2393.9919987303897!2d30.320439600490996!3d59.93850547005891!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1618024616357!5m2!1sru!2sru" width="600" height="400" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
+       </div>
+       <div class="page-footer__contacts">
+         <div class="page-footer__container container">
+           <a href="#" class="page-footer__logo">
+             <img src="img/footer-logo.svg" width="128" height="24" alt="Магазин Cat Energy" class="page-footer__title-image">
+           </a>
+           <div class="page-footer__element">
+             <ul class="socials">
+               <li class="socials__item">
+                 <a class="socials__link socials__link--vk" href="#" title="Вконтакте" target="_blank" rel="noopener noreferrer">
+                   <span class="visually-hidden">Ссылка на страницу магазина в социальной сети "В Контакте"</span>
+                   <svg class="socials__svg" aria-hidden="true" width="23" height="16">
+                     <use href="img/sprite.svg#icon-vk"></use>
+                   </svg>
+                 </a>
+               </li>
+               <li class="socials__item">
+                 <a class="socials__link socials__link--insta" href="#" title="Instagram" target="_blank" rel="noopener noreferrer">
+                   <span class="visually-hidden">Ссылка на страницу магазина в социальной сети "Instagram"</span>
+                   <svg class="socials__svg" aria-hidden="true" width="16" height="16">
+                     <use href="img/sprite.svg#icon-instagram"></use>
+                   </svg>
+                 </a>
+               </li>
+               <li class="socials__item">
+                 <a class="socials__link socials__link--facebook" href="#" title="Facebook" target="_blank" rel="noopener noreferrer">
+                   <span class="visually-hidden">Ссылка на страницу магазина в социальной сети "Facebook"</span>
+                   <svg class="socials__svg socials__svg--facebook" aria-hidden="true" width="22" height="22">
+                     <use href="img/sprite.svg#icon-facebook"></use>
+                   </svg>
+                 </a>
+               </li>
+             </ul>
+           </div>
+           <a class="page-footer__copyright" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noopener noreferrer">
+             <span class="page-footer__copyright-text">HTML Academy</span>
+             <svg aria-hidden="true" width="27" height="34">
+               <use  href="img/sprite.svg#logo-html-academy"></use>
+             </svg>
+           </a>
+         </div>
+       </div>
+     </footer>
+   </body>
+ </html>
