--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,6 +10,9 @@
     <link rel="apple-touch-icon" href="favicon180.png">
     <link rel="manifest" href="manifest.webmanifest">
 
+    <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/oswaldregular.woff2" as="font" type="font/woff2" crossorigin>
+
     <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body class="page__body">
