--- a/source/catalog.html
+++ b/source/catalog.html
@@ -81,6 +81,9 @@
               </div>
               <a href="#" class="card__link card__link-image">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1280px)" srcset="img/catalog/desktop/chicken-small.webp 1x, img/catalog/desktop/chicken-small@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/tablet/chicken-small.webp 1x, img/catalog/tablet/chicken-small@2x.webp 2x">
+                  <source type="image/webp" srcset="img/catalog/mobile/chicken-small.webp 1x, img/catalog/mobile/chicken-small@2x.webp 2x">
                   <source media="(min-width: 1280px)" srcset="img/catalog/desktop/chicken-small.png, img/catalog/desktop/chicken-small@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/catalog/tablet/chicken-small.png, img/catalog/tablet/chicken-small@2x.png 2x">
                   <img class="card__image" src="img/catalog/mobile/chicken-small.jpg" srcset="img/catalog/mobile/chicken-small@2x.jpg 2x" width="140" height="112" alt="Банка с кормом Cat Energy Pro">
@@ -112,6 +115,9 @@
               </div>
               <a href="#" class="card__link card__link-image card__link-image--chicken-large">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1280px)" srcset="img/catalog/desktop/chicken-large.webp 1x, img/catalog/desktop/chicken-large@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/tablet/chicken-large.webp 1x, img/catalog/tablet/chicken-large@2x.webp 2x">
+                  <source type="image/webp" srcset="img/catalog/mobile/chicken-large.webp 1x, img/catalog/mobile/chicken-large@2x.webp 2x">
                   <source media="(min-width: 1280px)" srcset="img/catalog/desktop/chicken-large.png, img/catalog/desktop/chicken-large@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/catalog/tablet/chicken-large.png, img/catalog/tablet/chicken-large@2x.png 2x">
                   <img class="card__image card__image--chicken-large" src="img/catalog/mobile/chicken-large.jpg" srcset="img/catalog/mobile/chicken-large@2x.jpg 2x" width="140" height="112" alt="Банка с кормом Cat Energy Pro">
@@ -143,6 +149,9 @@
               </div>
               <a href="#" class="card__link card__link-image">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1280px)" srcset="img/catalog/desktop/fish-small.webp 1x, img/catalog/desktop/fish-small@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/tablet/fish-small.webp 1x, img/catalog/tablet/fish-small@2x.webp 2x">
+                  <source type="image/webp" srcset="img/catalog/mobile/fish-small.webp 1x, img/catalog/mobile/fish-small@2x.webp 2x">
                   <source media="(min-width: 1280px)" srcset="img/catalog/desktop/fish-small.png, img/catalog/desktop/fish-small@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/catalog/tablet/fish-small.png, img/catalog/tablet/fish-small@2x.png 2x">
                   <img class="card__image" src="img/catalog/mobile/fish-small.jpg" srcset="img/catalog/mobile/fish-small@2x.jpg 2x" width="140" height="112" alt="Банка с кормом Cat Energy Pro">
@@ -174,6 +183,9 @@
               </div>
               <a href="#" class="card__link card__link-image card__link-image--large">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1280px)" srcset="img/catalog/desktop/fish-large.webp 1x, img/catalog/desktop/fish-large@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/tablet/fish-large.webp 1x, img/catalog/tablet/fish-large@2x.webp 2x">
+                  <source type="image/webp" srcset="img/catalog/mobile/fish-large.webp 1x, img/catalog/mobile/fish-large@2x.webp 2x">
                   <source media="(min-width: 1280px)" srcset="img/catalog/desktop/fish-large.png, img/catalog/desktop/fish-large@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/catalog/tablet/fish-large.png, img/catalog/tablet/fish-large@2x.png 2x">
                   <img class="card__image" src="img/catalog/mobile/fish-large.jpg" srcset="img/catalog/mobile/fish-large@2x.jpg 2x" width="140" height="112" alt="Банка с кормом Cat Energy Pro">
@@ -205,6 +217,9 @@
               </div>
               <a href="#" class="card__link card__link-image">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1280px)" srcset="img/catalog/desktop/buckwheat-small.webp 1x, img/catalog/desktop/buckwheat-small@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/tablet/buckwheat-small.webp 1x, img/catalog/tablet/buckwheat-small@2x.webp 2x">
+                  <source type="image/webp" srcset="img/catalog/mobile/buckwheat-small.webp 1x, img/catalog/mobile/buckwheat-small@2x.webp 2x">
                   <source media="(min-width: 1280px)" srcset="img/catalog/desktop/buckwheat-small.png, img/catalog/desktop/buckwheat-small@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/catalog/tablet/buckwheat-small.png, img/catalog/tablet/buckwheat-small@2x.png 2x">
                   <img class="card__image" src="img/catalog/mobile/buckwheat-small.jpg" srcset="img/catalog/mobile/buckwheat-small@2x.jpg 2x" width="140" height="112" alt="Банка с кормом Cat Energy Pro">
@@ -236,6 +251,9 @@
               </div>
               <a href="#" class="card__link card__link-image card__link-image--large">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1280px)" srcset="img/catalog/desktop/buckwheat-large.webp 1x, img/catalog/desktop/buckwheat-large@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/tablet/buckwheat-large.webp 1x, img/catalog/tablet/buckwheat-large@2x.webp 2x">
+                  <source type="image/webp" srcset="img/catalog/mobile/buckwheat-large.webp 1x, img/catalog/mobile/buckwheat-large@2x.webp 2x">
                   <source media="(min-width: 1280px)" srcset="img/catalog/desktop/buckwheat-large.png, img/catalog/desktop/buckwheat-large@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/catalog/tablet/buckwheat-large.png, img/catalog/tablet/buckwheat-large@2x.png 2x">
                   <img class="card__image" src="img/catalog/mobile/buckwheat-large.jpg" srcset="img/catalog/mobile/buckwheat-large@2x.jpg 2x" width="140" height="112" alt="Банка с кормом Cat Energy Pro">
@@ -267,6 +285,9 @@
               </div>
               <a href="#" class="card__link card__link-image">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1280px)" srcset="img/catalog/desktop/rice-small.webp 1x, img/catalog/desktop/rice-small@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/tablet/rice-small.webp 1x, img/catalog/tablet/rice-small@2x.webp 2x">
+                  <source type="image/webp" srcset="img/catalog/mobile/rice-small.webp 1x, img/catalog/mobile/rice-small@2x.webp 2x">
                   <source media="(min-width: 1280px)" srcset="img/catalog/desktop/rice-small.png, img/catalog/desktop/rice-small@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/catalog/tablet/rice-small.png, img/catalog/tablet/rice-small@2x.png 2x">
                   <img class="card__image" src="img/catalog/mobile/rice-small.jpg" srcset="img/catalog/mobile/rice-small@2x.jpg 2x" width="140" height="112" alt="Банка с кормом Cat Energy Pro">
